traefik-reverse-proxy/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: staging
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30081
